# krecik-cli

./: Cargo.toml  README.md
checks/tests/: test1.json
src/: main.rs
