[package]
name = "krecik-cli"
version = "0.3.3"
authors = ["Daniel (dmilith) Dettlaff <dmilith@me.com>"]
description = "Asynchronous, parallel external service checker (and reporter), using industry standard libraries: Curl, ngHTTP2 and OpenSSL."
keywords = ["curl", "web", "check", "tls-expire", "openssl"]
categories = ["asynchronous", "concurrency"]
homepage = "https://github.com/VerKnowSys/krecik-cli"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# krecik = { path = "../krecik" }
krecik = "0.8.3"

log = "0.4.8"
fern = { version = "0.6.0", features = ["colored"] }
colored = "1.9.3"
chrono = "0.4.13"
lockfile = "0.2.2"
ctrlc = "3.1.4"
